k8s/Components/network-policies/messaging/messaging-allow-rules.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-redis
  namespace: messaging
spec:
  podSelector:
    matchLabels:
      app: redis-queue
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
    - from:
        - podSelector:
            matchLabels:
              app: log-processor
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-log-processor-egress
  namespace: messaging
spec:
  podSelector:
    matchLabels:
      app: log-processor
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis-queue
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
